[project]
name = "router-agent"
version = "0.1.4"
description = "Sistema inteligente de processamento de mensagens que utiliza múltiplos agentes especializados para fornecer respostas adequadas a diferentes tipos de solicitações."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain[openai]>=0.3.20",
    "langgraph>=0.3.5",
]
